# snoopy

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README-GIT-REPOSITORY-INFO.txt  README.filtering  README.md  RELEASES  TODO  aclocal.m4  autogen.sh  bootstrap.sh  config.h.in  configure  configure.ac  configure.ac.generated  configure.scan  detect.c  enable.sh  install-sh  install.sh  snoopy-dev-helper.c  snoopy-filter.sh  snoopy-filter.sh.in  snoopy-test-output.c  snoopy.c  snoopy.conf  snoopy.h  snoopy_input_cmdline.c  snoopy_input_cmdline.h  snoopy_input_cwd.c  snoopy_input_egid.c  snoopy_input_egid.h  snoopy_input_euid.h  snoopy_input_filename.c  (+10 more)
doc/: CONTRIBUTING.md  DOCKER-BASED-ISSUE-DEMO-Dockerfile  DOCKER-BASED-ISSUE-DEMO.md  FAQ.md  FILTER_exclude_spawns_of.md  GETTING-SUPPORT.md  HACKING-INTERNALS.md  HACKING-OVERVIEW.md  HACKING-QA.md  HACKING.md  INSTALL-MULTIARCH.md  INSTALL.md  INTERNALS.md  Makefile.am  RELEASING-HOWTO.md  install-from-repo.md  install-from-source.md
doc/internals/: Makefile.am  README.md
doc/releasing/: RELEASE-HOWTO.txt
etc/: Makefile.am  snoopy.ini  snoopy.ini.in
lib/: Makefile.am
lib/inih/: IMPORT.defs  Makefile.am  SOURCE.txt  dev-update.sh
lib/iniparser/: README  SNOOPY_LIB_URI  SNOOPY_LIB_VERSION
lib/liblcthw/: IMPORT.defs  LICENSE  SOURCE  VERSION
src/: Makefile  Makefile.am  Makefile.in  configfile.c  configfile.h  configuration.c  configuration.h  datasourceregistry.c  datasourceregistry.h  error.c  error.h  filtering.c  filtering.h  filterregistry.c  filterregistry.h  genericregistry.c  genericregistry.h  init-deinit.c  init-deinit.h  inputdatastorage.c  inputdatastorage.h  inputregistry.c  inputregistry.h  inputs.c  inputs.h  inputs_data.c  inputs_data.h  libsnoopy-debug-addons.c  libsnoopy.c  libsnoopy.h  log.c  log.h  message.c  message.h  misc.c  misc.h  outputregistry.c  outputregistry.h  parser.c  parser.h  (+4 more)
src/action/: Makefile.am  log-message-dispatch.c  log-message-dispatch.h  log-syscall-exec.c  log-syscall-exec.h
src/cli/: Makefile.am  action-conf.c  action-conf.h  action-disable.c  action-disable.h  action-enable.c  action-enable.h  action-status.c  action-status.h  action-version.c  action-version.h  cli-subroutines.c  cli-subroutines.h  snoopy-action-detect.c  snoopy-action-detect.h  snoopy-action-disable.c  snoopy-action-disable.h  snoopy-action-enable.c  snoopy-action-enable.h  snoopy-action-version.c  snoopy-action-version.h  snoopy-cli-subroutines.c  snoopy-cli-subroutines.h  snoopy-cli.c  snoopy.c  snoopyctl.c
src/datasource/: Makefile.am  cgroup.c  cgroup.h  cmdline.c  cmdline.h  cwd.c  cwd.h  datasource-common.h  datetime.c  datetime.h  domain.c  domain.h  egid.c  egid.h  egroup.c  egroup.h  env.c  env.h  env_all.c  env_all.h  euid.c  euid.h  eusername.c  eusername.h  failure.c  failure.h  filename.c  filename.h  gid.c  gid.h  group.c  group.h  hostname.c  hostname.h  ipaddr.c  ipaddr.h  legacy.c  legacy.h  login.c  login.h  (+42 more)
src/entrypoint/: Makefile.am  cli.c  cli.h  execve-wrapper-test-configfile-env.c  execve-wrapper-test-configfile-env.h  execve-wrapper.c  execve-wrapper.h  execve_wrapper.c  execve_wrapper.h  execve_wrapper_test_configfile_env.c  execve_wrapper_test_configfile_env.h  test-cli.c  test-cli.h
src/eventsource/: Makefile.am  execve_wrapper.c  execve_wrapper.h  execve_wrapper_test_configfile_env.c  execve_wrapper_test_configfile_env.h
src/filter/: Makefile.am  exclude_spawns_of.c  exclude_spawns_of.h  exclude_uid.c  exclude_uid.h  noop.c  noop.h  only_root.c  only_root.h  only_tty.c  only_tty.h  only_uid.c  only_uid.h
src/input/: Makefile.am  Makefile.in  cmdline.c  cmdline.h  cwd.c  cwd.h  egid.c  egid.h  egroup.c  egroup.h  env.c  env.h  env_all.c  env_all.h  euid.c  euid.h  eusername.c  eusername.h  filename.c  filename.h  gid.c  gid.h  group.c  group.h  login.c  login.h  pid.c  pid.h  ppid.c  ppid.h  rpname.c  rpname.h  sid.c  sid.h  snoopy_version.c  snoopy_version.h  tty.c  tty.h  tty_uid.c  tty_uid.h  (+6 more)
src/lib/: Makefile.am
src/output/: Makefile.am  devlog.c  devlog.h  devlogoutput.c  devlogoutput.h  devnulloutput.c  devnulloutput.h  devttyoutput.c  devttyoutput.h  fileoutput.c  fileoutput.h  noopoutput.c  noopoutput.h  socketoutput.c  socketoutput.h  stderroutput.c  stderroutput.h  stdoutoutput.c  stdoutoutput.h  syslogoutput.c  syslogoutput.h
src/util/: Makefile.am  file-snoopy.h  file.c  file.h  list-snoopy.h  list.c  parser-snoopy.h  parser.c  pwd-snoopy.h  pwd.c  string-header.h  string-snoopy.h  string.c  syslog-snoopy.h  syslog.c  systemd-snoopy.h  systemd.c  utmp-snoopy.h  utmp.c
tests/: Makefile.am  _bootstrap-paths.sh.in  _bootstrap.sh
tests/cli/: Makefile.am  _bootstrap.sh  cli-action-about.sh  cli-action-conf.sh  cli-action-disable-1-nofile.sh  cli-action-disable-2-emptyfile.sh  cli-action-disable-31-only-entry.sh  cli-action-disable-32-only-entry-no-newline.sh  cli-action-disable-33-only-entry-and-space.sh  cli-action-disable-34-only-entry-and-tab.sh  cli-action-disable-35-only-entry-and-comment.sh  cli-action-disable-41-first.sh  cli-action-disable-42-middle.sh  cli-action-disable-43-last.sh  cli-action-disable-44-last-no-newline.sh  cli-action-disable-45-after-identical-comment.sh  cli-action-disable-51-dupe-mine.sh  cli-action-disable-52-dupe-alien.sh  cli-action-disable-53-dupe-mixed.sh  cli-action-enable-1-nofile.sh  cli-action-enable-2-emptyfile.sh  cli-action-enable-31-non-empty.sh  cli-action-enable-32-non-empty-no-newline.sh  cli-action-enable-45-after-identical-comment.sh  cli-action-enable-51-already-enabled.sh  cli-action-enable-52-another-instance-enabled.sh  cli-action-help.sh  cli-action-status-LD_PRELOAD-absent.sh  cli-action-status-LD_PRELOAD-present.sh  cli-action-status-LD_PRELOAD-set-but-not-present.sh  cli-action-status-ld.so.preload-alien.sh  (+9 more)
util/: Makefile.am  libsnoopy-debug-addons.c  libsnoopy-debug-addons.h  snoopy-detect.c  snoopy-dev-helper.c  snoopy-disable.in  snoopy-enable.in  snoopy-run-everything.c  snoopy-test-all-data-sources.c  snoopy-test-output.c
(+303 files in other folders)
